# TinyXbox360BackupManager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  macos-linker.sh  package-lock.json  package.json  release.config.mjs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: release.yml
assets/: wiitdb.txt
crates/core/: Cargo.toml
crates/core/examples/: bundled_content_check.rs  extract_check.rs  ftp_target_check.rs  inspect_content_disc.rs  local_target_check.rs  og_cover_check.rs  size_check.rs  title_update_check.rs  xbla_check.rs
crates/core/src/: archive.rs  badavatar.rs  banners.rs  checksum.rs  config.rs  conversion_queue.rs  convert.rs  covers.rs  data_dir.rs  disc_info.rs  drive_info.rs  drives.rs  extract.rs  ftp.rs  game.rs  game_details.rs  game_id.rs  god.rs  homebrew_app.rs  id_map.rs  iso_info.rs  lib.rs  mobcat.rs  normalize_dir_layout.rs  osc.rs  scan.rs  scrub.rs  stfs.rs  target.rs  title_updates.rs  txtcodes.rs  unity.rs  updates.rs  util.rs  wiiload.rs  xbe.rs
crates/core/src/homebrew/: meta.rs  mod.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: config.rs  convert.rs  covers.rs  dialogs.rs  disc_info.rs  drive_info.rs  file_drop.rs  game_details.rs  games.rs  homebrew.rs  homebrew_apps.rs  main.rs  notification.rs  osc.rs  state.rs  title_updates.rs  update.rs  util.rs  window_color.rs
crates/idmap/: Cargo.toml  build.rs
crates/idmap/src/: lib.rs  main.rs
package/: release-body.md
package/linux/: it.mq1.TinyWiiBackupManager.metainfo.xml
package/linux/AppDir/: AppRun  fr.dechriste.TinyXbox360BackupManager.desktop
package/linux/AppDir/usr/share/applications/: fr.dechriste.TinyXbox360BackupManager.desktop
package/macos/: appdmg.json
package/macos/App/Contents/: Info.plist
scripts/: bump-version.sh  make-icons.sh
ui/: about-page.slint  app-window.slint  conversion-queue.slint  game-grid-page.slint  game-table-page.slint  homebrew-apps-grid-page.slint  homebrew-apps-table-page.slint  messages.slint  osc-grid-page.slint  osc-table-page.slint  settings-page.slint  styling.slint  toolbox-page.slint  types.slint  ui-state.slint
ui/components/: aurora-help-modal.slint  badavatar-target-modal.slint  card-action-row.slint  card-header.slint  confirmation-modal.slint  conversion-queue-toolbar.slint  conversion-row.slint  cover-image.slint  ftp-target-modal.slint  game-card.slint  game-filter.slint  game-info-modal.slint  game-row.slint  games-other-toolbar.slint  games-toolbar.slint  homebrew-app-card.slint  homebrew-app-info-modal.slint  homebrew-app-row.slint  homebrew-apps-filter.slint  homebrew-apps-other-toolbar.slint  homebrew-apps-toolbar.slint  icon-button.slint  link.slint  modal.slint  my-line-edit.slint  navbar-button.slint  navbar.slint  no-drive.slint  no-games.slint  no-target.slint  notifications.slint  osc-app-card.slint  osc-app-info-modal.slint  osc-app-row.slint  osc-filter.slint  osc-other-toolbar.slint  osc-toolbar.slint  page-header.slint  removable-drive-picker.slint  select-target-modal.slint  (+10 more)
ui/components/toolbox/: aurora-scan-paths-card.slint  badavatar-card.slint  console-card.slint  covers-cache-card.slint  drive-info-card.slint  library-storage-card.slint
