[workspace]
resolver = "3"
members = ["crates/core", "crates/gui"]
default-members = ["crates/gui"]

[workspace.package]
version = "0.5.0"
rust-version = "1.96"
edition = "2024"
authors = ["Jean-Matthieu <jeanmatthieu@digital-balloon.fr>"]
license = "GPL-3.0-only"
repository = "https://github.com/jeanmatthieud/TinyXbox360BackupManager"
description = "A tiny game backup manager for the Xbox 360 (Aurora)"

[workspace.dependencies]
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# speed up slint compiler in dev builds
[profile.dev.build-override]
opt-level = 2

# speed up conversions in dev builds
[profile.dev.package."*"]
opt-level = 2
