[package]
name = "twbm-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
radix_fmt = "1.0"
fs_extra = "1.3"
serde = "1.0"
serde_json = "1.0"
quick-xml = { version = "0.40", features = ["serialize"] }
anyhow = { workspace = true }
ureq = { version = "3.3", default-features = false, features = ["gzip", "json"] }
which-fs = "0.2"
fs4 = { version = "1.1", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
wii-disc-info = { workspace = true }
crc32fast = "1.5"
num_cpus = "1.17"
sanitize-filename = "0.7.0-beta"
split-write = "0.2"
wiiload = "0.3"
semver = "1.0"
sys-locale = "0.3"
derive_more = { version = "2.1", features = ["display", "from_str"] }
directories = "6.0"
zip = { workspace = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86"))'.dependencies]
nod = { git = "https://github.com/encounter/nod.git", default-features = false, features = [
    "compress-lzma-vendored",
    "compress-zlib-vendored",
    "compress-zstd-vendored",
    "threading"
] }

[target.'cfg(not(all(target_os = "windows", target_arch = "x86")))'.dependencies]
nod = { git = "https://github.com/encounter/nod.git" }

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/rustls", "ureq/platform-verifier"]
