[package]
name = "txbm-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.3", default-features = false, features = [
  "gzip",
  "json",
] }
directories = "6.0"
suppaftp = "10.0"
iso2god = { git = "https://github.com/iliazeus/iso2god-rs", tag = "v1.8.0" }
xdvdfs = { version = "0.8", default-features = false, features = [
  "std",
  "read",
  "sync",
] }
fs_extra = "1.3"
fs4 = { version = "1.1", default-features = false }
which-fs = "0.2"
derive_more = { version = "2.1", features = ["display", "from_str"] }
semver = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = { version = "0.33", default-features = false, features = ["disk"] }
sha1 = "0.10"
sevenz-rust2 = { version = "0.21.3", default-features = false }
zip = { version = "8.6.0", default-features = false, features = ["deflate", "deflate64"] }

[features]
default = ["rustls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/rustls", "ureq/platform-verifier"]
