[package]
name = "twbm-gui"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[package.metadata.winresource]
OriginalFilename = "TinyWiiBackupManager.exe"
LegalCopyright = "Copyright © 2026 Manuel Quarneti. Licensed under GPL-3.0-only."

[dependencies]
twbm-core = { path = "../core", default-features = false }
slint = { version = "1.16", features = ["raw-window-handle-06", "unstable-winit-030"] }
anyhow = { workspace = true }
wii-disc-info = { workspace = true }
open = "5.3"
walkdir = "2.5"
time = "0.3"
rfd = "0.17"
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.27", features = ["dwm"] }

[build-dependencies]
slint-build = "1.16"
lucide-slint = "1.16"
winresource = "0.1"

[features]
default = ["native-tls"]
native-tls = ["twbm-core/native-tls"]
rustls = ["twbm-core/rustls"]
