[package]
name = "txbm-gui"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[package.metadata.winresource]
OriginalFilename = "TinyXbox360BackupManager.exe"
LegalCopyright = "Copyright © 2026 Manuel Quarneti and Jean-Matthieu Dechriste. Licensed under GPL-3.0-only."

[dependencies]
txbm-core = { path = "../core", default-features = false }
anyhow = { workspace = true }
slint = { version = "1.17", features = [
  "raw-window-handle-06",
  "unstable-winit-030",
] }
open = "5.3"
walkdir = "2.5"
rfd = "0.17"

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.28", features = ["dwm"] }

[build-dependencies]
slint-build = "1.17.1"
lucide-slint = "1.24.0"
winresource = "0.1"

[features]
default = ["rustls"]
native-tls = ["txbm-core/native-tls"]
rustls = ["txbm-core/rustls"]
